--- a/Chart.yaml
+++ b/Chart.yaml
@@ -2,9 +2,10 @@ apiVersion: v2
 name: go-ratelimit
 description: A Ratelimit Service Helm chart for Kubernetes
 type: application
-version: 0.1.4
+version: 0.1.5
 appVersion: 1.4.0
 dependencies:
 - name: "redis-sharded"
   version: 0.1.0
+  alias: "redish"
   repository: "@softonic-public"
