--- a/Chart.yaml
+++ b/Chart.yaml
@@ -7,5 +7,5 @@ appVersion: 1.4.0
 dependencies:
 - name: "redis-sharded"
   version: 0.1.0
-  alias: "redish"
+  alias: "redis"
   repository: "@softonic-public"
