new hpa, pdb and prioclass

--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -17,6 +17,7 @@ spec:
 {{ toYaml .Values.podLabels | indent 8 }}
 {{- end }}
     spec:
+      priorityClassName: "{{ .Values.priorityClassName }}"
     {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
