--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -28,7 +28,7 @@ spec:
       containers:
         - env:
           - name: LOG_LEVEL
-            value: debug
+            value: {{ .Values.logLevel }}
 {{- if .Values.redish.enabled }}
           - name: REDIS_SOCKET_TYPE
             value: {{ .Values.redisSocketType }}
