--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -11,6 +11,8 @@ spec:
       {{- include "go-ratelimit.selectorLabels" . | nindent 6 }}
   template:
     metadata:
+      annotations:
+        checksum/config: {{ include (print .Template.BasePath "/configmap.yaml") . | sha256sum }}
       labels:
         {{- include "go-ratelimit.selectorLabels" . | nindent 8 }}
 {{- if .Values.podLabels }}
