--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -5,3 +5,7 @@ metadata:
   name: initconfigmap
 data:
   config-initconfigmap.yaml: |-
+    domain: initconfigmap
+    descriptors:
+      - key: generic_key
+        value: global
