set prio if value exists. And improve image interpolation

--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -19,7 +19,9 @@ spec:
 {{ toYaml .Values.podLabels | indent 8 }}
 {{- end }}
     spec:
-      priorityClassName: "{{ .Values.priorityClassName }}"
+    {{- if .Values.priorityClassName }}
+      priorityClassName: {{ .Values.priorityClassName }}
+    {{- end }}
     {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
@@ -46,7 +48,7 @@ spec:
           - name: RUNTIME_IGNOREDOTFILES
             value: "true"
           name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Chart.AppVersion }}"
+          image: "{{ .Values.image.repository }}:{{ default .Chart.AppVersion .Values.image.tag }}"
           imagePullPolicy: "{{ .Values.image.pullPolicy }}"
           ports:
             - name: http-debug 
