update policy version to v1 & change default redisUrl
Signed-off-by: Gang Liu <gang.liu@daocloud.io>

--- a/values.yaml
+++ b/values.yaml
@@ -52,7 +52,7 @@ priorityClassName: ""
 
 podDisruptionBudget: {}
 
-redisUrl: "redis"
+redisUrl: "redish-backend"
 redisSocketType: "tcp"
 redisPort: 6379
 
